Fixed minor inconsistenices with responsive design on mobile

--- a/assets/index.css
+++ b/assets/index.css
@@ -286,7 +286,7 @@ nav {
 #nav-website-links-menu-sm {
     display: none;
 
-    padding: 30px 15px;
+    padding: 20px 15px;
 
     cursor: pointer;
 }
@@ -452,6 +452,8 @@ main {
 #hero-btn {
     font-size: 1.5rem;
     font-weight: 500;
+
+    text-decoration: none;
 }
 
 #hero-img-container {
@@ -461,7 +463,7 @@ main {
 #hero-img {
     margin: 15px;
     margin-bottom: 0px;
-    width: 100%;
+    width: calc(100% - 30px);
 
     border-radius: var(--border-radius-extra);
 
@@ -919,9 +921,11 @@ footer {
     nav {
         height: 40px;
 
+        overflow: hidden;
+
         padding: 2.5px 8px;
         padding-right: 0px;
-        margin-right: -7px;
+        /* margin-right: -7px; */
     }
 
     #nav-website-logo {
@@ -983,7 +987,7 @@ footer {
         margin: 5px;
         margin-bottom: 0px;
 
-        width: 100%;
+        width: calc(100% - 10px);
         height: auto;
     }
 
@@ -1055,7 +1059,7 @@ footer {
     /*#region Customize Options */
 
     #customize-options-container {
-        padding: 5px 10px;
+        padding: 5px 0px;
         margin: 15px;
 
         margin-bottom: 0px;
@@ -1413,7 +1417,7 @@ footer {
     }
 
     #customize-options-container {
-        margin: 30px 60px;
+        margin: 30px 6%;
     }
 
     #customize-options-header {
